--- a/src/telas/CadastroFuncionario.form
+++ b/src/telas/CadastroFuncionario.form
@@ -84,9 +84,9 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="cbBairro" alignment="1" min="-2" pref="127" max="-2" attributes="0"/>
-                          <Component id="jdcDataNascimento" min="-2" pref="127" max="-2" attributes="0"/>
                           <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="jdcDataNascimento" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -263,8 +263,6 @@
         <Property name="text" type="java.lang.String" value="ID"/>
       </Properties>
     </Component>
-    <Component class="com.toedter.calendar.JDateChooser" name="jdcDataNascimento">
-    </Component>
     <Component class="javax.swing.JComboBox" name="cbBairro">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
@@ -287,6 +285,8 @@
         </Property>
         <Property name="text" type="java.lang.String" value="BAIRRO"/>
       </Properties>
+    </Component>
+    <Component class="com.toedter.calendar.JDateChooser" name="jdcDataNascimento">
     </Component>
   </SubComponents>
 </Form>
